[package]
name = "tok"
version = "0.0.1"
edition = "2021"
description = "A CLI client for tick tick"
homepage = "https://github.com/dotzenith/tok"
repository = "https://github.com/dotzenith/tok"
license = "MIT"

[dependencies]
anyhow = "1.0.94"
tiny_http = "0.12.0"
serde = { version = "1.0.192", features = ["derive"] }
reqwest = { version = "0.11.20", default-features = false, features = ["blocking", "json", "rustls-tls"] }
open = "5.3.1"
serde_json = "1.0.134"
chrono = { version = "0.4.39", features = ["serde"] }

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
