[package]
name = "tok"
version = "0.0.1"
edition = "2021"
description = "A CLI client for tick tick"
homepage = "https://github.com/dotzenith/tok"
repository = "https://github.com/dotzenith/tok"
license = "MIT"

[dependencies]
anyhow = "1.0.94"
tiny_http = "0.12.0"
serde = { version = "1.0.192", features = ["derive"] }
reqwest = { version = "0.11.20", default-features = false, features = ["blocking", "json", "rustls-tls"] }
open = "5.3.1"
serde_json = "1.0.134"
bincode = "1.3.3"
platform-dirs = "0.3.0"
jiff = {version = "0.1.18", features = ["serde"] }
kolorz = "0.10.0"
clap = {version = "4.5.23", features = ["cargo"] }
rand = "0.8.5"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
